week 2/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-cert-secret
              mountPath: /etc/nginx/ssl
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-cert-secret
          secret:
            secretName: nginx-cert-secret
