week 2/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  ports:
    - name: http
    - port: 80
      targetPort: 80
    - name: https
    - port: 443
      targetPort: 443
  selector:
    app: nginx-proxy
